=========== 4.X.X
 * New generated files for pbs_wrap.c and pbs.py to support python 3.X versions

=========== 4.3.0
 * new_rack_pbsmon.py: For backward compatibility added -a/--all option. 
   Has the same functionality as -s/--summary
   Author: Bas van der Vlies

 * Added some license info to debian package and include GPL and LGPL 3.0
   files.
   Suggested by: W. Trevor King <wking at drexel dot edu>

 * PBSQuery.py: Added support for new feature in node status field:
    * message=EVENT:<key=value:>+
    * message=ERROR <text>

  Added the following syntax for node:
  	* node['error']
	* node['event']

  eg: node: n1
    state = free
    np = 8
    properties = ib,switch1,highmem
    ntype = cluster
    jobs = 0/567403.sara.nl, 1/567403.sara.nl
    status = ..,loadave=0.00,message=EVENT:sample.time=1288864220.003:cputotals.user=0:iconnect.pktout=0,netload=3487600394,state=free,...

  example code:
  	p = PBSQuery()
	node = p.getnode(n1)
	print node.event['sample.time']
	print node['event']['sample.time']

   Requested by: Roy Dragseth <roy dot dragseth add uit dotno>
   Author: Bas van der Vlies

=========== 4.2.0
 * Updated LICENSE file to LGPLV3. Thanks to Justin Bronder 
   (jsbronder add gentoo dot org) for the information and
   explanation.

 * examples/pbsmon.py. Patched so it also works for torque 2.5
   Author: Stijn De Weirdt stijn dot deweirdt at ugent dot be
   Applied by: Bas van der Vlies

 * setup.py.in changed determine which torque version is installed
   so we also support snapshots.
   Author: Mark Roberts ( mark at gingergeeks dot co dot uk)
   Applied by: Bas van der Vlies

 * PBSQuery:
   - get_nodes function for jobs now works for old and new datastructure and
     gives correct results if unique=True
     Reported by + idea for patch: Shunjie Lau (eijnuhs add gmail dot com)
     Author: Bas van der Vlies

 * Added AdvanceParser module. new_rack_pbsmon.py and sara_nodes.py make use of
   this module