@@ -1,5 +1,8 @@
 =========== 4.X.X
  * New generated files for pbs_wrap.c and pbs.py to support python 3.X versions
+ * Fixed AdvancedParser when using 01-12 range the zero was not appended.
+   Reported by: Ramon Bastiaans
+   Author: Dennis Stam
 
 =========== 4.3.0
  * new_rack_pbsmon.py: For backward compatibility added -a/--all option. 
